# data-structures-and-algorithms

./: .gitignore  CMakeLists.txt  bubble_sort.c  bubble_sort.h  main.c  merge_sort.c  merge_sort.h  merge_sort_openmp.c  merge_sort_openmp.h  merge_sort_pthread.c  merge_sort_pthread.h  util.c  util.h
